--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,31 @@
 apply plugin: 'com.android.application'
 
+
 android {
 
-    signingConfigs {
-        config {
-        }
-    }
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+//    signingConfigs {
+//        config {
+//        }
+//    }
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
+    flavorDimensions "default"
 
     defaultConfig {
         applicationId 'com.softmarshmallow.foodle'
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         multiDexEnabled true
-        versionCode 24
+        versionCode 25
         versionName '0.1.4.1'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -44,106 +50,106 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
     //floating action button
-    compile 'com.robertlevonyan.view:CustomFloatingActionButton:2.0.4'
+    implementation 'com.robertlevonyan.view:CustomFloatingActionButton:2.0.4'
 
     // DiscreteScrollView
-    compile 'com.yarolegovich:discrete-scrollview:1.3.0'
+    implementation 'com.yarolegovich:discrete-scrollview:1.3.0'
 
     // universal image loader
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
     // Facebook
-    compile 'com.facebook.android:facebook-android-sdk:4.27.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.27.0'
 
     // Material Drawer
-    compile('com.mikepenz:materialdrawer:5.9.5@aar') {
+    implementation('com.mikepenz:materialdrawer:5.9.5@aar') {
         transitive = true
     }
 
     //Advanced RecyclerView
-    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
+    implementation('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
         transitive = true
     }
 
     //TagView
-    compile 'me.gujun.android.taggroup:library:1.4@aar'
+    implementation 'me.gujun.android.taggroup:library:1.4@aar'
 
     // discreteSeekBar
-    compile 'org.adw.library:discrete-seekbar:1.0.1'
+    implementation 'org.adw.library:discrete-seekbar:1.0.1'
 
     // Date Time Picker
-    compile 'com.wdullaer:materialdatetimepicker:3.3.0'
+    implementation 'com.wdullaer:materialdatetimepicker:3.3.0'
 
     //number Stepper touch
-    compile 'com.github.DanielMartinus:Stepper-Touch:0.6'
+    implementation 'com.github.DanielMartinus:Stepper-Touch:0.6'
 
     //Android Material Stepper
-    compile 'com.stepstone.stepper:material-stepper:4.3.1'
+    implementation 'com.stepstone.stepper:material-stepper:4.3.1'
 
     // Badge
-    compile 'com.github.matrixxun:MaterialBadgeTextView:c5a27e8243'
+    implementation 'com.github.matrixxun:MaterialBadgeTextView:c5a27e8243'
 
     // Like Button
-    compile 'com.github.jd-alexander:LikeButton:0.2.2'
+    implementation 'com.github.jd-alexander:LikeButton:0.2.2'
 
     // Pull to refresh
-    compile 'com.yalantis:phoenix:1.2.3'
-    compile 'com.github.yalantis:taurus:1.0.2'
+    implementation 'com.yalantis:phoenix:1.2.3'
+    implementation 'com.github.yalantis:taurus:1.0.2'
 
     //FlowingDrawer
-    compile 'com.mxn.soul:flowingdrawer-core:2.0.0'
-    compile 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.mxn.soul:flowingdrawer-core:2.0.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
 
     // Navigation Tab Bar
-    compile 'devlight.io:navigationtabbar:1.2.5'
+    implementation 'devlight.io:navigationtabbar:1.2.5'
 
     // android image slider
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.slider:library:1.1.5@aar'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
 
     //Drag and drop to reorderable ListView
-    compile 'com.github.woxthebox:draglistview:1.5.2'
+    implementation 'com.github.woxthebox:draglistview:1.5.2'
 
     // validation Lib
-    compile 'com.mobsandgeeks:android-saripaar:2.0.3'
+    implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
 
     // QRCodeReaderView
-    compile('com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3@aar') {
+    implementation('com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3@aar') {
         transitive = true
     }
 
     // Image Picker
-    compile 'com.kbeanie:multipicker:1.1.31@aar'
+    implementation 'com.kbeanie:multipicker:1.1.31@aar'
 
     //expandableTextView
-    compile 'com.ms-square:expandableTextView:0.1.4'
+    implementation 'com.ms-square:expandableTextView:0.1.4'
 
     //AppIntro
-    compile 'com.github.apl-devs:appintro:v4.2.2'
+    implementation 'com.github.apl-devs:appintro:v4.2.2'
 
     // MaterialRatingBar
-    compile 'me.zhanghai.android.materialratingbar:library:1.0.2'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.0.2'
 
     //Nexmo
-    compile 'com.nexmo:verify:4.0.0'
+    implementation 'com.nexmo:verify:4.0.0'
 
     //country
-    compile 'com.hbb20:ccp:2.1.1'
+    implementation 'com.hbb20:ccp:2.1.1'
 
     //ScalarConverter
-    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
     //amazon S3
-    compile('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
-    compile 'com.amazonaws:aws-android-sdk-s3:2.6.+'
-    compile 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
+    implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
 
     //=============
 
@@ -154,36 +160,38 @@ dependencies {
     //
 
     // RxJava2
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
 
     //RoundedImageView
-    compile 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     //Sweet Alert Dialog
-    compile 'cn.pedant.sweetalert:library:1.3'
+//    implementation 'cn.pedant.sweetalert:library:1.3'
+    implementation 'com.github.thomper:sweet-alert-dialog:v1.4.0'
+
 
     // Android FancyButtons
-    compile 'com.github.medyo:fancybuttons:1.8.4'
+    implementation 'com.github.medyo:fancybuttons:1.8.4'
 
     // multi dex
-    compile 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:multidex:1.0.1'
 
     // CircleImageView
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     // Gson
-    compile 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     // Glide
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     // ButterKnife
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //calligraphy
-    compile 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     //=========
 
@@ -192,56 +200,34 @@ dependencies {
     //=========
 
     // Support
-    compile 'com.android.support:customtabs:27.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:design:27.0.2'
-    compile 'com.android.support:support-v4:27.0.2'
-    compile 'com.android.support:support-v13:27.0.2'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
-    compile 'com.android.support:support-vector-drawable:27.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:customtabs:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:support-v13:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:support-vector-drawable:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
 
     // Google play service
-    compile 'com.google.android.gms:play-services-maps:11.6.0'
-    compile 'com.google.android.gms:play-services-places:11.6.0'
-    compile 'com.google.android.gms:play-services:11.6.0'
+    implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    implementation 'com.google.android.gms:play-services-places:11.6.0'
+    implementation 'com.google.android.gms:play-services:11.6.0'
 
     //Google Login
-    compile 'com.google.firebase:firebase-auth:11.2.0'
-    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.android.gms:play-services-auth:11.6.0'
 
     // Firebase
-    compile 'com.google.firebase:firebase-database:11.6.0'
-    compile 'com.google.firebase:firebase-auth:11.6.0'
-    compile 'com.google.firebase:firebase-storage:11.6.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-database:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-storage:11.6.0'
+    testImplementation 'junit:junit:4.12'
 
     // retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
